fix: correção dark mode modal

--- a/client/public/styles/global.css
+++ b/client/public/styles/global.css
@@ -34,8 +34,8 @@
   --card-background: #262626;
   --border-color: #4a4a4a;
 
-  --white: #fff;
-  --black: #000;
+  --white: #000;
+  --black: #fff;
 
   --edit-background: #0f4d7f;
   --delete-background: #810000;
