--- a/client/public/styles/modal.css
+++ b/client/public/styles/modal.css
@@ -20,6 +20,7 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     z-index: 1001;
     min-height: 150px;
+    border: 1px solid var(--primary-color)
 }
 
 .modal-header {
@@ -41,9 +42,9 @@
     font-size: 1.5rem;
     font-weight: 700;
     line-height: 1;
-    color: #000;
+    color: var(--text-color);
     text-shadow: 0 1px 0 #fff;
-    opacity: .5;
+
     border: none;
     background: transparent;
     cursor: pointer;
